# rust-ray-tracer

./: .gitignore  Cargo.toml  README.md
src/: app.rs  canvas.rs  clock_example.rs  close_enough.rs  color.rs  lib.rs  main.rs  matrix.rs  point.rs  ppm.rs  projectile_example.rs  projectile_tick.rs  transformation.rs  translation.rs  tuple.rs  vector.rs
src/bones/: intersection.rs  matrix.rs  mod.rs  point.rs  ray.rs  sphere.rs  transform.rs  transformation.rs  tuple.rs  vector.rs
src/example/: clock_example.rs  mod.rs  projectile_example.rs  projectile_tick.rs
src/geometry/: close_enough.rs  intersection.rs  matrix.rs  mod.rs  plane.rs  point.rs  ray.rs  shape.rs  sphere.rs  transform.rs  tuple.rs  vector.rs
src/math/: intersection.rs  mod.rs  point.rs  ray.rs  sphere.rs  transform.rs  tuple.rs  vector.rs
src/parse/: mod.rs  parse_camera.rs  parse_light.rs  parse_little_things.rs  parse_shape.rs  parse_yaml.rs
src/pattern/: blended.rs  checkers.rs  flat.rs  gradient.rs  mod.rs  pattern.rs  rings.rs  stripes.rs  test.rs
src/physical/: lighting_calculator.rs  material.rs  mod.rs  point_light.rs  world.rs
src/render/: camera.rs  canvas.rs  color.rs  create_png.rs  mod.rs  ppm.rs  precomputation.rs  render_from_yaml.rs  shade_hit.rs  shade_ray.rs
src/ui/: app.rs  mod.rs  shape_menu.rs  sphere_menu.rs
tests/: acceptance.rs  integration.rs
tests/scenes/: 3_spheres_2_planes.yaml  almost_twin_peaks.yaml  blended_patterns.yaml  default_plane.yaml  floor_with_nested_checkers.yaml  less_shiny_sphere.yaml  plane_with_checkers.yaml  reflective_floor.yaml  (+13 more)
(+52 files in other folders)
