[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duplicate = "1.0.0"
dyn-eq = "0.1.3"
linked-hash-map = "0.5.6"
yaml-rust = "0.4.5"

[dev-dependencies]
insta = { version = "1.36.1", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
