[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
duplicate = "1.0.0"
dyn-eq = "0.1.3"
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["default", "all_loaders"] }
env_logger = "0.11.5"
image = { version = "0.25.2", features = ["png"] }
linked-hash-map = "0.5.6"
mockall = "0.13.1"
pbr = "1.1.1"
yaml-rust = "0.4.5"

[dev-dependencies]
insta = { version = "1.36.1", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
